--- a/.github/workflows/naver_book_author.yml
+++ b/.github/workflows/naver_book_author.yml
@@ -19,8 +19,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install uuid6 clickhouse_connect
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install requests uuid6 clickhouse_connect
+          fi
 
       - name: Run collector (author)
         env:
