--- a/.github/workflows/raw_naver_stats_hourly.yml
+++ b/.github/workflows/raw_naver_stats_hourly.yml
@@ -1,8 +1,8 @@
-name: raw_naver Stats (30min)
+name: raw_naver Stats Charts (30min)
 
 on:
   schedule:
-    - cron: '30 * * * *'
+    - cron: '30 * * * *'   # every hour at minute 30 (UTC)
   workflow_dispatch:
 
 permissions:
@@ -24,9 +24,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install clickhouse_connect pytz
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          else
+            pip install clickhouse_connect pytz matplotlib
+          fi
 
-      - name: Generate stats markdown
+      - name: Generate stats charts + markdown
         env:
           CH_HOST: ${{ secrets.CH_HOST }}
           CH_PORT: ${{ secrets.CH_PORT }}
@@ -39,10 +43,10 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add stats/raw_naver_stats.md
+          git add stats/raw_naver_stats.md stats/*.png
           if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
           fi
-          git commit -m "chore(stats): update raw_naver aggregates"
+          git commit -m "chore(stats): update raw_naver charts"
           git push
