--- a/.github/workflows/raw_naver_stats_hourly.yml
+++ b/.github/workflows/raw_naver_stats_hourly.yml
@@ -1,8 +1,8 @@
-name: raw_naver Stats Charts (30min)
+name: Stats Charts (30min)
 
 on:
   schedule:
-    - cron: '30 * * * *'   # every hour at minute 30 (UTC)
+    - cron: '30 * * * *'
   workflow_dispatch:
 
 permissions:
@@ -24,13 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then
-            pip install -r requirements.txt
-          else
-            pip install clickhouse_connect pytz matplotlib
-          fi
+          pip install clickhouse_connect pytz matplotlib
 
-      - name: Generate stats charts + markdown
+      - name: Generate charts
         env:
           CH_HOST: ${{ secrets.CH_HOST }}
           CH_PORT: ${{ secrets.CH_PORT }}
@@ -43,10 +39,10 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add stats/raw_naver_stats.md stats/*.png
+          git add stats/*
           if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
           fi
-          git commit -m "chore(stats): update raw_naver charts"
+          git commit -m "chore(stats): update charts"
           git push
